# twistedcelery

./: .gitignore  README.rst  Vagrantfile  provision.sh  requirements.txt  run-worker.sh  setup.cfg  setup.py  tasks.py  temp.py  temp2.py  tests.py  txkombu.py
tests/: conftest.py  tasks.py  test_twistedcelery.py
twistedcelery/: __init__.py  amqp.py  amqp0-9-1.stripped.xml  app.py
twistedcelery/transports/: amqp.py
