[metadata]
name = twisted-celery
version = 0.0.1
description = Celery connector for Twisted.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Patrick Cloke
author_email = clokep@patrick.cloke.us
url = https://github.com/clokep/twisted-celery
keywords = twisted celery
license = BSD
classifiers =
     Development Status :: 2 - Pre-Alpha
     License :: OSI Approved :: BSD License
     Topic :: System :: Distributed Computing
     Programming Language :: Python
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.4
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     Operating System :: OS Independent

[options]
packges = find:
install_requires =
     celery>=4.0,<5.0
    # Probably works with older versions.
     twisted>=18.7.0
    # Probably works with older versions.
     pika>=0.12.0<1.0.0
